--- a/QUIZ_16_IRENE/src/index.css
+++ b/QUIZ_16_IRENE/src/index.css
@@ -51,13 +51,17 @@ select {
   gap: 10px;
   padding: 30px;
   width: 50%;
-
 }
 
 .image1 {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  color: orange;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+  width: 50%;
+  padding: 10px;
 }
 
 .image1 img {
@@ -140,4 +144,113 @@ select {
 
 .image4 p:hover {
   color: orange;
+}
+
+.button-trend button {
+  border: 2px solid orange;
+  padding: 1em 4em;
+  border-radius: 2em;
+  background-color: white;
+  font-size: 1em;
+  color: orange;
+  font-weight: bold;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.container2 {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  position: relative;
+  margin-left: 20vw;
+  padding: 2rem;
+}
+
+.container3 {
+  width: 55%;
+  background-color: white;
+  border-radius: 0.5rem;
+  position: absolute;
+  top: -16.5rem;
+  left: 0rem;
+  min-height: calc(90vh - 4rem);
+  box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.1);
+  padding: 2em;
+}
+
+textarea {
+  font-family: sans-serif;
+  width: 70%;
+  height: 90px; 
+  resize: none;
+  border: none;
+  position: relative;
+  left: 1em;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+.container3 h1 {
+  font-family: sans-serif;
+  color: rgb(219, 217, 217);
+  font-size: 45px;
+}
+
+.profile-com {
+  display: flex;
+  align-items: center;
+  box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.1);
+  width: 40vw;
+  height: 10vh;
+  margin-top: 20px;
+}
+
+.profile-com .profile-pict{
+  width:3em;
+  height: auto;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+.profile-pic .profiles {
+  position: relative;
+  bottom: 110px;
+  width:3em;
+  height: auto;
+  border-radius: 50%;
+}
+
+.profile-com p {
+  font-family: sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  font-weight: bold;
+  margin-left: 10px;
+  font-size: 1em;
+  margin-top: -2em;
+}
+
+.text1 {
+  color: gray;
+  font-family: sans-serif;
+  display: flex;
+
+}
+
+.profile-com h4 {
+  font-family: sans-serif;
+  margin-left: -11em;
+  margin-top: 1em;
+  font-weight: 100;
+}
+
+.profile-pic p {
+  display: flex;
+  justify-content: end;
+  margin-top: -2em;
+  font-family: sans-serif;
+  color: gray;
 }
